--- a/test/visual/form-validation.html
+++ b/test/visual/form-validation.html
@@ -65,6 +65,29 @@
     </div>
 </form>
 
+<h3>Alignment Check</h3>
+<form>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="align0" required>
+        <label class="form-check-label" for="align0">Default check</label>
+    </div>
+    <div class="form-check form-checkradio">
+        <input class="form-check-input" type="checkbox" value="" id="align1" required>
+        <label class="form-check-label" for="align1">Custom check</label>
+    </div>
+    <div class="form-check form-checkradio">
+        <input class="form-check-input" type="radio" value="" name="align2" id="align2" required>
+        <label class="form-check-label" for="align2">Custom radio</label>
+    </div>
+    <div class="form-check form-switch">
+        <input class="form-check-input" type="checkbox" value="" id="align3" required>
+        <label class="form-check-label" for="align3">Custom switch</label>
+    </div>
+    <div class="form-group">
+        <button class="btn btn-primary" type="submit">Submit form</button>
+    </div>
+</form>
+
 <h2>Client Side Script</h2>
 <form class="needs-validation" novalidate>
     <div class="row">
