Misc cleanup and visual test items

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -152,6 +152,15 @@ Holder.addTheme("gray", {
 </p>
 
 <p>
+    <a>no href and tabindex</a><br>
+    <a href>href only</a><br>
+    <a tabindex="-1">tabindex -1</a><br>
+    <a tabindex="0">tabindex 0</a><br>
+    <a href tabindex="-1">href & tabindex -1</a><br>
+    <a href tabindex="0">href & tabindex 0</a>
+</p>
+
+<p>
     <small>Small text (tag)</small>
     <br />
     <span class="small">Small text (class)</span>
