Dropdown: Revise alignment class names

--- a/test/visual/dropdown.html
+++ b/test/visual/dropdown.html
@@ -137,17 +137,17 @@
         <ul class="dropdown-menu">
             <li class="dropdown-header">Dropdown header</li>
             <li><a href="#">Action</a></li>
-            <li class="dropdown-reverse">
+            <li class="dropend">
                 <a href="#">Reverse menu</a>
                 <ul>
-                    <li class="dropdown-reverse">
+                    <li class="dropend">
                         <a href="#">Reverse menu</a>
                         <ul>
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown-forward">
+                    <li class="dropstart">
                         <a href="#">Forward menu</a>
                         <ul>
                             <li><a href="#">Action</a></li>
@@ -156,17 +156,17 @@
                     </li>
                 </ul>
             </li>
-            <li class="dropdown-forward">
+            <li class="dropstart">
                 <a href="#">Forward menu</a>
                 <ul>
-                    <li class="dropdown-reverse">
+                    <li class="dropend">
                         <a href="#">Reverse menu</a>
                         <ul>
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown-forward">
+                    <li class="dropstart">
                         <a href="#">Forward menu</a>
                         <ul>
                             <li><a href="#">Action</a></li>
@@ -185,7 +185,7 @@
     <a href="#">Outer link</a>
 </div>
 
-<div class="dropdown dropdown-reverse float-end">
+<div class="dropdown dropend float-end">
     <button type="button" class="btn btn-primary" data-cfw="dropdown">
         Reverse Dropdown YY <span class="caret" aria-hidden="true"></span>
     </button>
