--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -13,10 +13,6 @@
 <script src="../../dist/js/figuration.js"></script>
 
 <style>
-.select-sizing .btn {
-    vertical-align: top;
-}
-
 .form-control + .form-control {
     margin-top: .5rem;
 }
@@ -202,138 +198,136 @@
 </div>
 
 <h2>Select Sizing Comparison:</h2>
-<div class="select-sizing">
-    <form class="row">
-      <div class="col-md-2 text-end">
-        <button type="button" class="btn btn-primary btn-xsmall">Test</button>
-      </div>
-      <div class="col-md-1">
-        <label class="form-label form-label-xsmall">Label</label>
-      </div>
-      <fieldset class="form-group col-md-1">
-        <label for="size0-2" class="sr-only">Example label</label>
-        <input type="text" class="form-control-static form-control-xsmall" id="size0-2" value="Static">
-      </fieldset>
-      <fieldset class="form-group col-md-3">
-        <label for="size0-0" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-xsmall" id="size0-0" placeholder="Example input">
-      </fieldset>
-      <fieldset class="form-group col-md-3">
-        <label for="size0-1" class="sr-only">Example select</label>
-        <select class="form-control form-control-xsmall" id="size0-1">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-        </select>
-      </fieldset>
-    </form>
-    <form class="row">
-      <div class="col-md-2 text-end">
-        <button type="button" class="btn btn-primary btn-small">Test</button>
-      </div>
-      <div class="col-md-1">
-        <label class="form-label form-label-small">Label</label>
-      </div>
-      <fieldset class="form-group col-md-1">
-        <label for="size1-2" class="sr-only">Example label</label>
-        <input type="text" class="form-control-static form-control-small" id="size1-2" value="Static">
-      </fieldset>
-      <fieldset class="form-group col-md-3">
-        <label for="size1-0" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-small" id="size1-0" placeholder="Example input">
-      </fieldset>
-      <fieldset class="form-group col-md-3">
-        <label for="size1-1" class="sr-only">Example select</label>
-        <select class="form-control form-control-small" id="size1-1">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-        </select>
-      </fieldset>
-    </form>
-    <form class="row">
-      <div class="col-md-2 text-end">
-        <button type="button" class="btn btn-primary">Test</button>
-      </div>
-      <div class="col-md-1">
-        <label class="form-label">Label</label>
-      </div>
-      <fieldset class="form-group col-md-1">
-        <label for="size2-2" class="sr-only">Example label</label>
-        <input type="text" class="form-control-static" id="size2-2" value="Static">
-      </fieldset>
-      <fieldset class="form-group col-md-3">
-        <label for="size2-0" class="sr-only">Example label</label>
-        <input type="text" class="form-control" id="size2-0" placeholder="Example input">
-      </fieldset>
-      <fieldset class="form-group col-md-3">
-        <label for="size2-1" class="sr-only">Example select</label>
-        <select class="form-control" id="size2-1">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-        </select>
-      </fieldset>
-    </form>
-    <form class="row">
-      <div class="col-md-2 text-end">
-        <button type="button" class="btn btn-primary btn-large">Test</button>
-      </div>
-      <div class="col-md-1">
-        <label class="form-label form-label-large">Label</label>
-      </div>
-      <fieldset class="form-group col-md-1">
-        <label for="size3-2" class="sr-only">Example label</label>
-        <input type="text" class="form-control-static form-control-large" id="size3-2" value="Static">
-      </fieldset>
-      <fieldset class="form-group col-md-3">
-        <label for="size3-0" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-large" id="size3-0" placeholder="Example input">
-      </fieldset>
-      <fieldset class="form-group col-md-3">
-        <label for="size3-1" class="sr-only">Example select</label>
-        <select class="form-control form-control-large" id="size3-1">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-        </select>
-      </fieldset>
-    </form>
-    <form class="row">
-      <div class="col-md-2 text-end">
-        <button type="button" class="btn btn-primary btn-xlarge">Test</button>
-      </div>
-      <div class="col-md-1">
-        <label class="form-label form-label-xlarge">Label</label>
-      </div>
-      <fieldset class="form-group col-md-1">
-        <label for="size4-2" class="sr-only">Example label</label>
-        <input type="text" class="form-control-static form-control-xlarge" id="size4-2" value="Static">
-      </fieldset>
-      <fieldset class="form-group col-md-3">
-        <label for="size4-0" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-xlarge" id="size4-0" placeholder="Example input">
-      </fieldset>
-      <fieldset class="form-group col-md-3">
-        <label for="size4-1" class="sr-only">Example select</label>
-        <select class="form-control form-control-xlarge" id="size4-1">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-        </select>
-      </fieldset>
-    </form>
-</div> <!-- /.select-sizing -->
+<form class="row">
+  <div class="col-md-2 text-end">
+    <button type="button" class="btn btn-primary btn-xsmall">Test</button>
+  </div>
+  <div class="col-md-1">
+    <label class="form-label form-label-xsmall">Label</label>
+  </div>
+  <fieldset class="form-group col-md-1">
+    <label for="size0-2" class="sr-only">Example label</label>
+    <input type="text" class="form-control-static form-control-xsmall" id="size0-2" value="Static">
+  </fieldset>
+  <fieldset class="form-group col-md-3">
+    <label for="size0-0" class="sr-only">Example label</label>
+    <input type="text" class="form-control form-control-xsmall" id="size0-0" placeholder="Example input">
+  </fieldset>
+  <fieldset class="form-group col-md-3">
+    <label for="size0-1" class="sr-only">Example select</label>
+    <select class="form-control form-control-xsmall" id="size0-1">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+  </fieldset>
+</form>
+<form class="row">
+  <div class="col-md-2 text-end">
+    <button type="button" class="btn btn-primary btn-small">Test</button>
+  </div>
+  <div class="col-md-1">
+    <label class="form-label form-label-small">Label</label>
+  </div>
+  <fieldset class="form-group col-md-1">
+    <label for="size1-2" class="sr-only">Example label</label>
+    <input type="text" class="form-control-static form-control-small" id="size1-2" value="Static">
+  </fieldset>
+  <fieldset class="form-group col-md-3">
+    <label for="size1-0" class="sr-only">Example label</label>
+    <input type="text" class="form-control form-control-small" id="size1-0" placeholder="Example input">
+  </fieldset>
+  <fieldset class="form-group col-md-3">
+    <label for="size1-1" class="sr-only">Example select</label>
+    <select class="form-control form-control-small" id="size1-1">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+  </fieldset>
+</form>
+<form class="row">
+  <div class="col-md-2 text-end">
+    <button type="button" class="btn btn-primary">Test</button>
+  </div>
+  <div class="col-md-1">
+    <label class="form-label">Label</label>
+  </div>
+  <fieldset class="form-group col-md-1">
+    <label for="size2-2" class="sr-only">Example label</label>
+    <input type="text" class="form-control-static" id="size2-2" value="Static">
+  </fieldset>
+  <fieldset class="form-group col-md-3">
+    <label for="size2-0" class="sr-only">Example label</label>
+    <input type="text" class="form-control" id="size2-0" placeholder="Example input">
+  </fieldset>
+  <fieldset class="form-group col-md-3">
+    <label for="size2-1" class="sr-only">Example select</label>
+    <select class="form-control" id="size2-1">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+  </fieldset>
+</form>
+<form class="row">
+  <div class="col-md-2 text-end">
+    <button type="button" class="btn btn-primary btn-large">Test</button>
+  </div>
+  <div class="col-md-1">
+    <label class="form-label form-label-large">Label</label>
+  </div>
+  <fieldset class="form-group col-md-1">
+    <label for="size3-2" class="sr-only">Example label</label>
+    <input type="text" class="form-control-static form-control-large" id="size3-2" value="Static">
+  </fieldset>
+  <fieldset class="form-group col-md-3">
+    <label for="size3-0" class="sr-only">Example label</label>
+    <input type="text" class="form-control form-control-large" id="size3-0" placeholder="Example input">
+  </fieldset>
+  <fieldset class="form-group col-md-3">
+    <label for="size3-1" class="sr-only">Example select</label>
+    <select class="form-control form-control-large" id="size3-1">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+  </fieldset>
+</form>
+<form class="row">
+  <div class="col-md-2 text-end">
+    <button type="button" class="btn btn-primary btn-xlarge">Test</button>
+  </div>
+  <div class="col-md-1">
+    <label class="form-label form-label-xlarge">Label</label>
+  </div>
+  <fieldset class="form-group col-md-1">
+    <label for="size4-2" class="sr-only">Example label</label>
+    <input type="text" class="form-control-static form-control-xlarge" id="size4-2" value="Static">
+  </fieldset>
+  <fieldset class="form-group col-md-3">
+    <label for="size4-0" class="sr-only">Example label</label>
+    <input type="text" class="form-control form-control-xlarge" id="size4-0" placeholder="Example input">
+  </fieldset>
+  <fieldset class="form-group col-md-3">
+    <label for="size4-1" class="sr-only">Example select</label>
+    <select class="form-control form-control-xlarge" id="size4-1">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+  </fieldset>
+</form>
 
 <hr />
 
@@ -452,6 +446,33 @@
 </div>
 
 <hr />
+
+<h2>Misc Sizing</h2>
+<div class="row mb-1">
+    <div class="col">
+        <input type="text" class="form-control" aria-label="Name" value="Some Name" />
+    </div>
+    <div class="col">
+        <div class="input-group"><div class="input-group-addon"><div class="input-group-text" id="msize0-addon">@</div></div><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="msize0-addon"><span class="input-group-addon"><button class="btn" type="button">Button</button></span></div>
+    </div>
+    <div class="col">
+        <select class="form-control">
+            <option value="">Default select</option>
+            <option value="1">one</option>
+            <option value="2">two</option>
+            <option value="3">three</option>
+            <option value="4">four</option>
+            <option value="5">five</option>
+        </select>
+    </div>
+    <div class="col">
+        <input type="date" class="form-control" aria-label="Name" value="Some Time" />
+    </div>
+</div>
+
+<hr />
+
+<h2>Static and Label Sizing:</h2>
 
 <h2>On Backgrounds</h2>
 
