tweak test layout

--- a/test/visual/dropdown.html
+++ b/test/visual/dropdown.html
@@ -78,33 +78,35 @@
     </ul>
 </div>
 
-<div class="dropdown mb-1 ms-2">
-    <a href="#" id="dropdown2" class="btn btn-info" role="button" data-cfw="dropdown" data-cfw-dropdown-hover="true">
-        Hover Dropdown <span class="caret"></span>
-    </a>
-    <ul id="dropdown2_menu "class="dropdown-menu">
-        <li class="dropdown-header">Sample Header</li>
-        <li><a href="#2-0">Action</a></li>
-        <li class="active"><a href="#1-1" class="active">Active action</a></li>
-        <li>
-            <a href="#2-2">Something else here</a>
-            <ul>
-                <li><a href="#2-2-0">Action</a></li>
-                <li><a href="#2-2-1">Another action</a></li>
-                <li><a href="#2-2-2">Something else here</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="#2-3">Something else here</a>
-            <ul>
-                <li><a href="#2-3-0">Action</a></li>
-                <li><a href="#2-3-1">Another action</a></li>
-                <li><a href="#2-3-2">Something else here</a></li>
-            </ul>
-        </li>
-        <li class="dropdown-divider"></li>
-        <li><a href="#2-4">Separated link</a></li>
-    </ul>
+<div class="d-flex flex-center">
+    <div class="dropdown mb-1">
+        <a href="#" id="dropdown2" class="btn btn-info" role="button" data-cfw="dropdown" data-cfw-dropdown-hover="true">
+            Hover Dropdown <span class="caret"></span>
+        </a>
+        <ul id="dropdown2_menu "class="dropdown-menu">
+            <li class="dropdown-header">Sample Header</li>
+            <li><a href="#2-0">Action</a></li>
+            <li class="active"><a href="#1-1" class="active">Active action</a></li>
+            <li>
+                <a href="#2-2">Something else here</a>
+                <ul>
+                    <li><a href="#2-2-0">Action</a></li>
+                    <li><a href="#2-2-1">Another action</a></li>
+                    <li><a href="#2-2-2">Something else here</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#2-3">Something else here</a>
+                <ul>
+                    <li><a href="#2-3-0">Action</a></li>
+                    <li><a href="#2-3-1">Another action</a></li>
+                    <li><a href="#2-3-2">Something else here</a></li>
+                </ul>
+            </li>
+            <li class="dropdown-divider"></li>
+            <li><a href="#2-4">Separated link</a></li>
+        </ul>
+    </div>
 </div>
 
 <div class="dropdown mb-1">
