Simplify some disabled styles and fix some cursor issues

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -2220,13 +2220,13 @@ Showing a <kbd>kdb sample</kbd>
 
 <h3>Close</h3>
 <p>
-   Anchor: <a href="#" role="button" class="close" data-cfw-alert-animate=false aria-label="Close"><span aria-hidden="true">&times;</span></a>
-   Button: <button type="button" class="close" data-cfw-alert-animate=false aria-label="Close"><span aria-hidden="true">&times;</span></button>
+   Anchor: <a href="#" role="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></a>
+   Button: <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 </p>
 <h4>Close: Disabled</h4>
 <p>
-   Anchor: <a href="#" role="button" class="close disabled" tabindex="-1" data-cfw-alert-animate=false aria-label="Close"><span aria-hidden="true">&times;</span></a>
-   Button: <button type="button" class="close" disabled data-cfw-alert-animate=false aria-label="Close"><span aria-hidden="true">&times;</span></button>
+   Anchor: <a href="#" role="button" class="close disabled" tabindex="-1" aria-label="Close"><span aria-hidden="true">&times;</span></a>
+   Button: <button type="button" class="close" disabled aria-label="Close"><span aria-hidden="true">&times;</span></button>
 </p>
 
 <h3>Base Navigation</h3>
