--- a/test/visual/button.html
+++ b/test/visual/button.html
@@ -100,27 +100,27 @@
 
 Anchor variants:<br />
 <p>
-    <a href="#" role="button" class="btn disabled">Default</a>
-    <a href="#" role="button" class="btn btn-primary disabled">Primary</a>
-    <a href="#" role="button" class="btn btn-secondary disabled">Secondary</a>
-    <a href="#" role="button" class="btn btn-success disabled">Success</a>
-    <a href="#" role="button" class="btn btn-info disabled">Info</a>
-    <a href="#" role="button" class="btn btn-warning disabled">Warning</a>
-    <a href="#" role="button" class="btn btn-danger disabled">Danger</a>
-    <a href="#" role="button" class="btn btn-light disabled">Light</a>
-    <a href="#" role="button" class="btn btn-dark disabled">Dark</a>
-    <a href="#" role="button" class="btn btn-link disabled">Link</a>
+    <a href="#" role="button" class="btn disabled" tabindex="-1" aria-disabled="true">Default</a>
+    <a href="#" role="button" class="btn btn-primary disabled" tabindex="-1" aria-disabled="true">Primary</a>
+    <a href="#" role="button" class="btn btn-secondary disabled" tabindex="-1" aria-disabled="true">Secondary</a>
+    <a href="#" role="button" class="btn btn-success disabled" tabindex="-1" aria-disabled="true">Success</a>
+    <a href="#" role="button" class="btn btn-info disabled" tabindex="-1" aria-disabled="true">Info</a>
+    <a href="#" role="button" class="btn btn-warning disabled" tabindex="-1" aria-disabled="true">Warning</a>
+    <a href="#" role="button" class="btn btn-danger disabled" tabindex="-1" aria-disabled="true">Danger</a>
+    <a href="#" role="button" class="btn btn-light disabled" tabindex="-1" aria-disabled="true">Light</a>
+    <a href="#" role="button" class="btn btn-dark disabled" tabindex="-1" aria-disabled="true">Dark</a>
+    <a href="#" role="button" class="btn btn-link disabled" tabindex="-1" aria-disabled="true">Link</a>
 </p>
 <p>
-    <a href="#" role="button" class="btn btn-outline disabled">Default</a>
-    <a href="#" role="button" class="btn btn-outline-primary disabled">Primary</a>
-    <a href="#" role="button" class="btn btn-outline-secondary disabled">Secondary</a>
-    <a href="#" role="button" class="btn btn-outline-success disabled">Success</a>
-    <a href="#" role="button" class="btn btn-outline-info disabled">Info</a>
-    <a href="#" role="button" class="btn btn-outline-warning disabled">Warning</a>
-    <a href="#" role="button" class="btn btn-outline-danger disabled">Danger</a>
-    <a href="#" role="button" class="btn btn-outline-light disabled">Light</a>
-    <a href="#" role="button" class="btn btn-outline-dark disabled">Dark</a>
+    <a href="#" role="button" class="btn btn-outline disabled" tabindex="-1" aria-disabled="true">Default</a>
+    <a href="#" role="button" class="btn btn-outline-primary disabled" tabindex="-1" aria-disabled="true">Primary</a>
+    <a href="#" role="button" class="btn btn-outline-secondary disabled" tabindex="-1" aria-disabled="true">Secondary</a>
+    <a href="#" role="button" class="btn btn-outline-success disabled" tabindex="-1" aria-disabled="true">Success</a>
+    <a href="#" role="button" class="btn btn-outline-info disabled" tabindex="-1" aria-disabled="true">Info</a>
+    <a href="#" role="button" class="btn btn-outline-warning disabled" tabindex="-1" aria-disabled="true">Warning</a>
+    <a href="#" role="button" class="btn btn-outline-danger disabled" tabindex="-1" aria-disabled="true">Danger</a>
+    <a href="#" role="button" class="btn btn-outline-light disabled" tabindex="-1" aria-disabled="true">Light</a>
+    <a href="#" role="button" class="btn btn-outline-dark disabled" tabindex="-1" aria-disabled="true">Dark</a>
 </p>
 
 <h2>Sizes</h2>
