add site data, stub out `<head>` and footer portions, some versioned assets

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,6 @@
-<!doctype html>
-<html>
-<head>
-<title>Page title</title>
-</head>
-<body>
+---
+layout: home
+---
+
 <p>Hi from the index</p>
-</body>
-</html>
+
