--- a/site/index.html
+++ b/site/index.html
@@ -100,7 +100,7 @@ layout: home
             <h2>Flexbox Enabled</h2>
             <p>Many of Figuration's components, but not all, are built using flexbox.  This means enhanced layout and alignment control, but it does come at the cost of not being able to support older browsers.</p>
         </div>
-        <div class="col-md-6 border-s pt-2 pt-md-0 mt-2 mt-md-0">
+        <div class="col-md-6 border-s pt-1 pt-md-0">
             <h2>Sass Source</h2>
             <div class="media">
                 <img src="{{ site.path }}/assets/img/sass.svg" class="d-flex me-1" width="64" alt="Sass logo">
