restructure to support multi-version

--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@ layout: home
     <div class="container">
         <div class="row flex-md-center flex-md-items-center pb-2 mb-2 border-b">
             <div class="col-6 col-sm-4 col-xl-3 mx-auto mx-md-0">
-                {% include icons/figuration-solid.svg, class: "logo-home img-fluid" %}
+                {% include "./icons/figuration-solid.svg", class: "logo-home img-fluid" %}
             </div>
             <div class="w-100 d-md-none"></div>
             <div class="col-sm-9 col-md-7 col-lg-6 mx-auto mx-md-0 text-center text-md-start">
