re-indent and add component pages

--- a/site/404.html
+++ b/site/404.html
@@ -11,7 +11,7 @@ sitemapIgnore: true
     <p class="font-weight-sbold">We have recently overhauled the site layout for the Figuration documentation.</p>
     <p>Try going to our home page, or use the global navigation at the top of the page.</p>
     <p>
-        <a href="{{ site.baseurl }}/" class="fs-large font-weight-bold"><span class="fas fa-home" aria-hidden="true"></span> Go to Figuration's home page!</a>
+        <a href="{{ site.path }}/" class="fs-large font-weight-bold"><span class="fas fa-home" aria-hidden="true"></span> Go to Figuration's home page!</a>
     </p>
 </div>
 
