update linting, fix a few issues

--- a/site/4.0/examples/navbars/index.html
+++ b/site/4.0/examples/navbars/index.html
@@ -8,12 +8,12 @@
 <title>Figuration Navbar Examples</title>
 
 <!-- Figuration CSS -->
-<link rel="stylesheet" href="../../dist/css/figuration.min.css">
+<link rel="stylesheet" href="{{ site.path }}/assets/{{ version.docs}}/dist/css/figuration.min.css">
 
 <!-- jQuery and Figuration JS -->
-<script src="../../assets/js/vendor/jquery.slim.min.js"></script>
-<script src="../../assets/js/vendor/popper.min.js"></script>
-<script src="../../dist/js/figuration.min.js"></script>
+<script src="{{ site.path }}/assets/{{ version.docs}}/js/vendor/jquery.slim.min.js"></script>
+<script src="{{ site.path }}/assets/{{ version.docs}}/js/vendor/popper.min.js"></script>
+<script src="{{ site.path }}/assets/{{ version.docs}}/dist/js/figuration.min.js"></script>
 
 <style>
 .navbar {
