--- a/site/4.0/examples/starter-template/index.html
+++ b/site/4.0/examples/starter-template/index.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Figuration Starter Template</title>
+<title>Figuration Starter Template</title>
 
-        <!-- Figuration CSS -->
-        <link rel="stylesheet" href="../../dist/css/figuration.min.css">
+<!-- Figuration CSS -->
+<link rel="stylesheet" href="{{ site.path }}/assets/{{ version.docs}}/dist/css/figuration.min.css">
 
-        <!-- jQuery and Figuration JS -->
-        <script src="../../assets/js/vendor/jquery.slim.min.js"></script>
-        <script src="../../assets/js/vendor/popper.min.js"></script>
-        <script src="../../dist/js/figuration.min.js"></script>
+<!-- jQuery and Figuration JS -->
+<script src="{{ site.path }}/assets/{{ version.docs}}/js/vendor/jquery.slim.min.js"></script>
+<script src="{{ site.path }}/assets/{{ version.docs}}/js/vendor/popper.min.js"></script>
+<script src="{{ site.path }}/assets/{{ version.docs}}/dist/js/figuration.min.js"></script>
 
-        <!-- Custom styles for this template -->
-        <link href="starter-template.css" rel="stylesheet">
-    </head>
-    <body>
+<!-- Custom styles for this template -->
+<style>
+.starter-template {
+    padding: 2rem 1rem;
+    text-align: center;
+}
+</style>
+</head>
+<body>
 
-        <nav class="navbar navbar-expand navbar-dark bg-dark">
-            <a class="navbar-brand" href="">Project Name</a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>
-            </ul>
-        </nav>
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+    <a class="navbar-brand" href="">Project Name</a>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">Contact</a>
+        </li>
+    </ul>
+</nav>
 
-        <div class="container">
+<div class="container">
 
-            <div class="starter-template">
-                <h1>Hello, world!</h1>
-                <h2>Figuration Starter Template</h2>
-                <p>This is just a quick start! Only basic HTML and a sample of additional CSS is used.</p>
-            </div>
+    <div class="starter-template">
+        <h1>Hello, world!</h1>
+        <h2>Figuration Starter Template</h2>
+        <p>This is just a quick start! Only basic HTML and a sample of additional CSS is used.</p>
+    </div>
 
-        </div><!-- /.container -->
+</div><!-- /.container -->
 
-    </body>
+</body>
 </html>
