--- a/site/4.0/examples/navbars/index.html
+++ b/site/4.0/examples/navbars/index.html
@@ -479,5 +479,46 @@
     </nav>
 </div>
 
+<h2>Responsive Containers</h2>
+
+<nav class="navbar navbar-expand-xl navbar-light bg-light flex-between">
+    <div class="container-xl px-0 px-xl-1">
+        <a href="#" class="navbar-brand">Expand at `xl`</a>
+        <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarRC0">
+            <span aria-hidden="true">&#8801;</span>
+        </button>
+
+        <div class="navbar-collapse collapse" id="navbarRC0">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link disabled" tabindex="-1" aria-disabled="true">Disabled</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="form-inline ms-auto">
+                <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-primary" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+</nav>
+
+<div class="container-xl mt-n1 mb-2">
+  Matching <code>.container-xl</code>...
+</div>
+
 </body>
 </html>
