Misc doc tweaks and fixes

--- a/site/4.0/examples/grid/index.html
+++ b/site/4.0/examples/grid/index.html
@@ -8,12 +8,12 @@
 <title>Figuration Grid Examples</title>
 
 <!-- Figuration CSS -->
-<link rel="stylesheet" href="{{ site.path }}/assets/{{ version.docs}}/dist/css/figuration.min.css">
+<link rel="stylesheet" href="{{ site.path }}/assets/{{ version.docs }}/dist/css/figuration.min.css">
 
 <!-- jQuery and Figuration JS -->
-<script src="{{ site.path }}/assets/{{ version.docs}}/js/vendor/jquery.slim.min.js"></script>
-<script src="{{ site.path }}/assets/{{ version.docs}}/js/vendor/popper.min.js"></script>
-<script src="{{ site.path }}/assets/{{ version.docs}}/dist/js/figuration.min.js"></script>
+<script src="{{ site.path }}/assets/{{ version.docs }}/js/vendor/jquery.slim.min.js"></script>
+<script src="{{ site.path }}/assets/{{ version.docs }}/js/vendor/popper.min.js"></script>
+<script src="{{ site.path }}/assets/{{ version.docs }}/dist/js/figuration.min.js"></script>
 
 <!-- Custom styles for this template -->
 <style>
@@ -192,7 +192,7 @@ h2 {
     <hr />
 
     <h2>Column clearing</h2>
-    <p>Use <a href="../../layout/grid/#column-resets">column resets</a> at specific breakpoints to prevent awkward wrapping with uneven content.</p>
+    <p>Use <a href="{{ site.path }}/{{ version.docs }}/layout/grid/#column-resets">column resets</a> at specific breakpoints to prevent awkward wrapping with uneven content.</p>
     <div class="row">
         <div class="col-4 col-sm-3">
             .col-4 .col-sm-3
