--- a/site/4.0/examples/navbar-static-top/index.html
+++ b/site/4.0/examples/navbar-static-top/index.html
@@ -8,12 +8,12 @@
 <title>Static Top Navbar Example</title>
 
 <!-- Figuration CSS -->
-<link rel="stylesheet" href="{{ site.path }}/assets/{{ version.docs}}/dist/css/figuration.min.css">
+<link rel="stylesheet" href="{{ site.path }}/assets/{{ version.docs }}/dist/css/figuration.min.css">
 
 <!-- jQuery and Figuration JS -->
-<script src="{{ site.path }}/assets/{{ version.docs}}/js/vendor/jquery.slim.min.js"></script>
-<script src="{{ site.path }}/assets/{{ version.docs}}/js/vendor/popper.min.js"></script>
-<script src="{{ site.path }}/assets/{{ version.docs}}/dist/js/figuration.min.js"></script>
+<script src="{{ site.path }}/assets/{{ version.docs }}/js/vendor/jquery.slim.min.js"></script>
+<script src="{{ site.path }}/assets/{{ version.docs }}/js/vendor/popper.min.js"></script>
+<script src="{{ site.path }}/assets/{{ version.docs }}/dist/js/figuration.min.js"></script>
 
 <style>
 body {
@@ -68,7 +68,7 @@ body {
             In order to experience the responsive behaviour of the navbar, you will have to resize your browser above and below the <code>lg</code> breakpoint.
         </p>
         <p>
-            <a href="../../components/navbar/" class="btn btn-lg btn-primary">View navbar docs &raquo;</a>
+            <a href="{{ site.path }}/{{ version.docs }}/components/navbar/" class="btn btn-lg btn-primary">View navbar docs &raquo;</a>
         </p>
     </div>
 </div>
