--- a/site/4.0/examples/navbars/index.html
+++ b/site/4.0/examples/navbars/index.html
@@ -8,12 +8,12 @@
 <title>Figuration Navbar Examples</title>
 
 <!-- Figuration CSS -->
-<link rel="stylesheet" href="{{ site.path }}/assets/{{ version.docs}}/dist/css/figuration.min.css">
+<link rel="stylesheet" href="{{ site.path }}/assets/{{ version.docs }}/dist/css/figuration.min.css">
 
 <!-- jQuery and Figuration JS -->
-<script src="{{ site.path }}/assets/{{ version.docs}}/js/vendor/jquery.slim.min.js"></script>
-<script src="{{ site.path }}/assets/{{ version.docs}}/js/vendor/popper.min.js"></script>
-<script src="{{ site.path }}/assets/{{ version.docs}}/dist/js/figuration.min.js"></script>
+<script src="{{ site.path }}/assets/{{ version.docs }}/js/vendor/jquery.slim.min.js"></script>
+<script src="{{ site.path }}/assets/{{ version.docs }}/js/vendor/popper.min.js"></script>
+<script src="{{ site.path }}/assets/{{ version.docs }}/dist/js/figuration.min.js"></script>
 
 <style>
 .navbar {
@@ -33,13 +33,13 @@
         </p>
         <p>
             For positioning of navbars, checkout the
-            <a href="../../examples/navbar-static-top/">static-top</a>
+            <a href="{{ site.path }}/{{ version.docs }}/examples/navbar-static-top/">static-top</a>
             and
-            <a href="../../examples/navbar-fixed-top/">fixed-top</a>
+            <a href="{{ site.path }}/{{ version.docs }}/examples/navbar-fixed-top/">fixed-top</a>
             examples.
         </p>
         <p>
-            <a href="../../components/navbar/" class="btn btn-lg btn-primary">View navbar docs &raquo;</a>
+            <a href="{{ site.path }}/{{ version.docs }}/components/navbar/" class="btn btn-lg btn-primary">View navbar docs &raquo;</a>
         </p>
     </div>
 </div>
