--- a/test/visual/button.html
+++ b/test/visual/button.html
@@ -300,6 +300,18 @@ Anchor variants:<br />
     </div>
 </div>
 
+<fieldset class="mb-1" disabled>
+  <legend class="form-label">Disabled fieldset</legend>
+  <div class="btn-check">
+    <input id="fieldset0" type="checkbox" class="btn-check-input">
+    <label for="fieldset0" class="btn">Disabled Checkbox</label>
+  </div>
+  <div class="btn-check">
+    <input id="fieldset1" type="radio" name="fieldset1" class="btn-check-input">
+    <label for="fieldset1-0" class="btn">Disabled Radio</label>
+  </div>
+</fieldset>
+
 </div>
 </body>
 </html>
