--- a/test/visual/form-check.html
+++ b/test/visual/form-check.html
@@ -121,6 +121,18 @@
     <input class="form-check-input" type="checkbox" id="check4" disabled checked>
     <label class="form-check-label" for="check4">Disabled custom checkbox</label>
 </div>
+<fieldset class="mt-1" disabled>
+  <legend class="form-label">Disabled fieldset</legend>
+  <div class="form-check form-checkradio">
+    <input class="form-check-input" type="checkbox" id="check5">
+    <label class="form-check-label" for="check5">Custom checkbox in a disabled fieldset</label>
+  </div>
+  <div class="form-check form-checkradio">
+    <input class="form-check-input" type="checkbox" id="check6" checked>
+    <label class="form-check-label" for="check6">Checked custom checkbox in a disabled fieldset</label>
+  </div>
+</fieldset>
+
 <br>
 
 <div class="form-check form-checkradio">
@@ -135,6 +147,21 @@
   <input class="form-check-input" type="radio" id="radio2" name="radios" disabled>
   <label class="form-check-label" for="radio2">Disabled custom radio</label>
 </div>
+<div class="form-check form-checkradio">
+  <input class="form-check-input" type="radio" id="radio3" name="radiosdis" disabled checked>
+  <label class="form-check-label" for="radio3">Disabled checked custom radio</label>
+</div>
+<fieldset class="mt-1" disabled>
+  <legend class="form-label">Disabled fieldset</legend>
+  <div class="form-check form-checkradio">
+    <input class="form-check-input" type="radio" id="radio4" name="radiosfsdisfs">
+    <label class="form-check-label" for="radio4">Custom radio in a disabled fieldset</label>
+  </div>
+  <div class="form-check form-checkradio">
+    <input class="form-check-input" type="radio" id="radio5" name="radiosfsdisfs" checked>
+    <label class="form-check-label" for="radio5">Checked custom radio in a disabled fieldset</label>
+  </div>
+</fieldset>
 
 <br>
 
