fix v3 download links

--- a/3.0/get-started/download/index.html
+++ b/3.0/get-started/download/index.html
@@ -317,7 +317,7 @@
           Download just the compiled and minified CSS and JavaScript. Doesn't include any documentation or original source files.
         </div>
         <div class="card-footer text-sm-center">
-<a href="https://github.com/cast-org/figuration/releases/download/v4.0.0-beta.2/figuration-4.0.0-beta.2-dist.zip" class="btn btn-info" onclick="ga('send', 'event', 'Get Started', 'Download', 'Download compiled 3.0.5');">Download Figuration</a>
+<a href="https://github.com/cast-org/figuration/releases/download/v3.0.5/figuration-3.0.5-dist.zip" class="btn btn-info" onclick="ga('send', 'event', 'Get Started', 'Download', 'Download compiled 3.0.5');">Download Figuration</a>
         </div> <!-- /.card-footer -->
       </div> <!-- /.card -->
     </div>
@@ -328,7 +328,7 @@
           Download everything: source Sass, JavaScript, and documentation files. <strong>Requires a Sass compiler, <a href="https://github.com/postcss/autoprefixer">Autoprefixer</a>, <a href="https://github.com/luisrudge/postcss-flexbugs-fixes">postcss-flexbugs-fixes</a>, and <a href="/3.0/get-started/build-tools/#tooling-setup">some setup</a>.</strong>
         </div>
         <div class="card-footer text-sm-center">
-<a href="https://github.com/cast-org/figuration/archive/v4.0.0-beta.2.zip" class="btn" onclick="ga('send', 'event', 'Get Started', 'Download', 'Download source 3.0.5');">Download source</a>
+<a href="https://github.com/cast-org/figuration/archive/v3.0.5.zip" class="btn" onclick="ga('send', 'event', 'Get Started', 'Download', 'Download source 3.0.5');">Download source</a>
         </div> <!-- /.card-footer -->
       </div> <!-- /.card -->
     </div>  <!-- /.col -->
