more wording changes

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -804,7 +804,7 @@ $(window).ready(function() {
             </script>
 
             <div class="mb-1">
-                <button class="btn popover-drag-fixed btn-secondary" title="This should be confined to the viewport">Fixed Drag</button>
+                <button class="btn popover-drag-fixed btn-secondary" title="This should be confined to the window">Fixed Drag</button>
                 <script>
                 $('.popover-drag-fixed').CFW_Popover({
                     drag: true,
